Updated webshop example for Cubes 1.x (now generated using CubETL).

--- a/webshop/slicer.ini
+++ b/webshop/slicer.ini
@@ -1,5 +1,9 @@
 # Slicer OLAP server configuration
 
+
+[workspace]
+log_level: debug
+
 [server]
 host: localhost
 port: 5000
@@ -12,6 +16,7 @@ allow_cors_origin: *
 type: sql
 url: sqlite:///webshop.sqlite
 
-[workspace]
-model: model.json
-log_level: info
+[models]
+main: model.json
+
+
